[package]
name = "wasm-test"
version = "0.1.0"
authors = ["Alex Lapinski <contact@alexlapinski.name>"]
description = "An example rust package to compile into webassembly."
license = "MIT/Apache-2.0"
repository = "git@github.com:alexlapinski/rust-wasm.git"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "~0.2"
